# code-eternal

./: .cursorrules  .gitignore  .rules  .vercelignore  .windsurfrules  AGENTS.md  Anchor.toml  CLAUDE_CONTEXT.md  GEMINI.md  LICENSE  README.md  next.config.ts  package-lock.json  package.json  tsconfig.json  worklog.md
.claude/: settings.json  settings.local.json
.github/: copilot-instructions.md
.github/workflows/: anchor-deploy-dev.yml  anchor-deploy.yml  ci-app.yml  deploy-dev.yml  deploy.yml  (+3 more)
agent-ctx/: 6-main.md
app/: .env.local.example  .gitignore  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vercel.json
cloudflare/: worker-passport.js  wrangler.toml
contract/: Anchor.toml  package.json  tsconfig.json
db/: custom.db
docker/: docker-compose.yml  nginx.conf
infra/: main.tf  outputs.tf  variables.tf
listener/: Dockerfile  package.json
prisma/: schema.prisma
programs/code_eternal_router/: Cargo.toml
programs/code_eternal_router/src/: errors.rs  lib.rs
programs/code_eternal_router/src/instructions/: award_memory.rs  process_payment.rs  update_site_url.rs
public/: ai.txt  feed.xml  humans.txt  manifest.json  robots.txt
scripts/: run-migration.js
site-gen/: Dockerfile  package.json
src/: middleware.ts
tests/: code_eternal_router.ts
upload/: CODE OF DIGITAL ETERNITY. CODE ETERNAL - OFFICIAL AUTHORSHIP DOCUMENTATION.docx  CODE_Brain_v2.4_PERFECTED.docx  Запуск и автоматизация CODE Рождение AIfa и Семьи v.4.4   06.04.2026.docx  КОАН в дейтвии.docx
web/: next.config.ts  package.json
(+244 files in other folders)
