[package]
name = "code_eternal_router"
version = "0.1.0"
description = "CODE ETERNAL payment router and user registry"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "code_eternal_router"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["token", "associated_token"] }
